# crabslumber

./: .gitignore  .prettierrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: check-development.yml  check-release.yml  lint-release.yml
src/: constants.rs  discord.rs  helper.rs  logger.rs  main.rs  motd_parser.rs  settings.rs
