[package]
name = "crabslumber"
authors = ["@Ar7hurz1nh0", "@vincs"]
license = "MIT"
description = "A server management tool that keeps an eye on your Minecraft server during its well-deserved rest."
homepage = "https://github.com/Ar7hurz1nh0/crabslumber"
version = "0.0.4"
edition = "2021"

[dependencies]
simplelog = { version = "^0.12.1", features = ["paris"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9.21"
signal-hook = "0.3.15"
base64 = "0.21.2"
serde_json = "1.0.96"
reqwest = "0.11.18"
regex = "1.8.4"
chrono = "0.4.26"
clap = "4.3.3"
toml = "0.7.4"
